Fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,13 +10,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'Manrope', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
   font-size: 1.5em;
   margin: 10px 0 30px;
-  letter-spacing: 8px;
+  letter-spacing: 6px;
 }
 
 body {
